--- a/app/static/index.html
+++ b/app/static/index.html
@@ -16,6 +16,12 @@
       #devices {
         margin-bottom: 20px;
       }
+      #gesture {
+        font-size: 20px;
+        font-weight: bold;
+        color: blue;
+        margin-top: 10px;
+      }
     </style>
     <script>
       let pc = null;
@@ -52,6 +58,21 @@
         });
       }
 
+      async function fetchGesture(device_id) {
+        try {
+          const response = await fetch(`/recognitions/get_by_id/${device_id}`);
+          const data = await response.json();
+          if (data && data.gesture) {
+            document.getElementById("gesture").textContent = `Gesture: ${data.gesture}`;
+          } else {
+            document.getElementById("gesture").textContent = "Gesture: No data";
+          }
+        } catch (error) {
+          console.error("Error fetching gesture:", error);
+          document.getElementById("gesture").textContent = "Gesture: Error";
+        }
+      }
+
       async function selectDevice(device_id) {
         console.log("Selected device:", device_id);
         currentDevice = device_id;
@@ -61,6 +82,7 @@
           body: JSON.stringify({ camera_id: device_id, stream: true }),
         });
         await startStream();
+        setInterval(() => fetchGesture(device_id), 5000); // Fetch gesture every 5 seconds
       }
 
       async function stopViewing() {
@@ -86,7 +108,6 @@
 
           pc.addTransceiver("video", { direction: "recvonly" });
 
-          // Add ICE candidate handling
           pc.onicecandidate = (event) => {
             if (event.candidate) {
               console.log("New ICE candidate:", event.candidate);
@@ -202,5 +223,6 @@
     ></video>
     <button id="playButton">Start Video</button>
     <p>Status: <span id="status">Idle</span></p>
+    <p id="gesture">Gesture: Waiting...</p>
   </body>
 </html>
